--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_transaction.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_transaction.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:background="@color/colorPrimary"
+              android:clickable="true"
               android:gravity="center"
               android:orientation="horizontal"
               android:padding="10dp">
