--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_cancel.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_with_button_cancel.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    android:clickable="true"
     android:gravity="fill_horizontal">
 
     <LinearLayout
