--- a/WalletAnalyzing/app/src/main/res/layout/action_bar_with_spinner.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/action_bar_with_spinner.xml
@@ -4,6 +4,7 @@
               android:layout_height="?attr/actionBarSize"
               android:layout_gravity="center"
               android:background="@color/colorPrimary"
+              android:clickable="true"
               android:gravity="center"
               android:orientation="horizontal"
               android:padding="10dp"
