--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_create.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_create.xml
@@ -9,7 +9,8 @@
     android:paddingBottom="3dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:paddingTop="3dp">
+    android:paddingTop="3dp"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
