--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_category.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
+    android:clickable="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,10 +19,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingLeft="10dp"
             android:text="All"
             android:textColor="@color/textcolor_title_attribute"
-            android:textStyle="bold"
-            android:paddingLeft="10dp"/>
+            android:textStyle="bold"/>
 
         <ToggleButton
             android:id="@+id/tbAllCategory"
