--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_create.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_create.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
+    android:clickable="true"
     android:orientation="vertical"
     android:paddingBottom="20dp"
     android:paddingLeft="10dp"
@@ -109,11 +110,11 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="3"
             android:background="@android:color/transparent"
             android:gravity="left"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:text="@string/new_category_description"
             android:textColor="@android:color/black"/>
 
