--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_description.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_description.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/background_main_frame"
+              android:clickable="true"
               android:padding="10dp">
 
     <EditText
@@ -10,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/background_description"
+        android:capitalize="sentences"
         android:gravity="top|left"
         android:padding="5dp"
-        android:textColor="@android:color/black"
-        android:capitalize="sentences"/>
+        android:textColor="@android:color/black"/>
 </LinearLayout>
