--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:clickable="true"
     android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="8dp"
-    android:background="@android:color/white">
+    android:paddingTop="8dp">
 
     <org.droidparts.widget.ClearableEditText
         android:id="@+id/etEvent"
