--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_update.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/layout_update_transaction"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<FrameLayout
+    android:id="@+id/layout_update_transaction"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="true">
 
     <ScrollView
         android:layout_width="match_parent"
