--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_budget.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_budget.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/background_budget_item"
+              android:descendantFocusability="blocksDescendants"
               android:orientation="horizontal"
               android:padding="5dp"
               android:weightSum="20">
@@ -36,29 +37,24 @@
                 android:textColor="@android:color/black"/>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/tvAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="right"
+            android:text="@string/budget_item_total"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tvIncremental"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
             android:layout_marginTop="5dp"
-            android:gravity="end"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvBudget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/budget_item_total"
-                android:textColor="@android:color/black"/>
-
-            <TextView
-                android:id="@+id/tvBudgetAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="2.000.000 đ"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"/>
-        </LinearLayout>
+            android:text="@string/budget_item_incremental"
+            android:textColor="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,51 +62,23 @@
             android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvExpensed"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:text="@string/budget_item_expensed"
+                android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tvExpense"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/budget_item_expensed"
-                    android:textColor="@android:color/black"/>
-
-                <TextView
-                    android:id="@+id/tvExpensed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="2.000.000đ"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvBalance"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="end"
-                android:orientation="horizontal">
+                android:gravity="right"
+                android:text="@string/budget_item_balance"
+                android:textColor="@color/colorPrimary"/>
 
-                <TextView
-                    android:id="@+id/tvBalanceTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/budget_item_balance"
-                    android:textColor="@color/colorPrimary"/>
-
-                <TextView
-                    android:id="@+id/tvBalance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="200.000đ"
-                    android:textColor="@color/colorPrimary"/>
-
-            </LinearLayout>
         </LinearLayout>
 
         <SeekBar
@@ -129,6 +97,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/ivDetail"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
