--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/layout_budget"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_budget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
@@ -20,14 +20,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="20"
             android:text="@string/budget_detail_description_all"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" />
 
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_next"/>
+            android:src="@drawable/icon_next" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,95 +35,117 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/background_budget_item"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:padding="5dp"
         android:weightSum="20">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="20"
-            android:orientation="vertical">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Giải trí "
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tvDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="(01/01 - 31/01)"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvAmount"
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Giải trí "
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_gravity="right"
-                android:text="@string/budget_item_total"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:text="(01/01 - 31/01)"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginLeft="5dp"
+            android:text="@string/budget_item_total"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvIncremental"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginTop="5dp"
+            android:text="@string/budget_item_incremental"
+            android:textColor="@color/colorPrimary" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvIncremental"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvExpensed"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginTop="5dp"
-                android:text="@string/budget_item_incremental"
-                android:textColor="@color/colorPrimary"/>
+                android:layout_weight="1"
+                android:text="@string/budget_item_expensed"
+                android:textColor="@android:color/black" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvBalance"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="@string/budget_item_balance"
+                android:textColor="@color/colorPrimary" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvExpensed"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/budget_item_expensed"
-                    android:textColor="@android:color/black"/>
+        <SeekBar
+            android:id="@+id/sbExpensed"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:progress="10"
+            android:progressDrawable="@drawable/budget_progress_ok"
+            android:secondaryProgress="90"
+            android:thumb="@drawable/budget_progress_thumb" />
 
-                <TextView
-                    android:id="@+id/tvBalance"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="@string/budget_item_balance"
-                    android:textColor="@color/colorPrimary"/>
-            </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/listview_divider" />
 
-            <SeekBar
-                android:id="@+id/sbExpensed"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginTop="5dp"
-                android:padding="0dp"
-                android:progress="10"
-                android:progressDrawable="@drawable/budget_progress_ok"
-                android:secondaryProgress="90"
-                android:thumb="@drawable/budget_progress_thumb"
-                />
+        <LinearLayout
+            android:id="@+id/llBudgetDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="10dp">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="20"
+                android:text="@string/budget_detail_detail"
+                android:textColor="@android:color/black" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/icon_next" />
         </LinearLayout>
 
     </LinearLayout>
@@ -145,12 +167,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="20"
             android:text="@string/budget_detail_history"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_next"/>
+            android:src="@drawable/icon_next" />
     </LinearLayout>
 </LinearLayout>
