--- a/WalletAnalyzing/app/src/main/res/anim/expand.xml
+++ b/WalletAnalyzing/app/src/main/res/anim/expand.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="200"
-        android:fromDegrees="-90"
+        android:duration="100"
+        android:fromDegrees="0"
+        android:toDegrees="90"
         android:interpolator="@android:anim/linear_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
         android:repeatCount="0"
         android:startOffset="0"
         android:fillAfter="true"
-        android:fillEnabled="true"
-        android:toDegrees="0"/>
+        android:fillEnabled="true"/>
