--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_budget"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
@@ -9,26 +9,12 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="20"
-            android:text="@string/budget_detail_description_all"
-            android:textColor="@android:color/black" />
-
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/icon_next" />
-    </LinearLayout>
+        android:text="@string/budget_detail_description_all"
+        android:textColor="@android:color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:text="Giải trí "
                 android:textColor="@android:color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvDate"
@@ -58,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="(01/01 - 31/01)"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"/>
         </LinearLayout>
 
         <TextView
@@ -69,7 +55,7 @@
             android:layout_marginLeft="5dp"
             android:text="@string/budget_item_total"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tvIncremental"
@@ -78,7 +64,7 @@
             android:layout_gravity="right|center_vertical"
             android:layout_marginTop="5dp"
             android:text="@string/budget_item_incremental"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -92,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/budget_item_expensed"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"/>
 
             <TextView
                 android:id="@+id/tvBalance"
@@ -101,7 +87,7 @@
                 android:layout_weight="1"
                 android:gravity="right"
                 android:text="@string/budget_item_balance"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"/>
         </LinearLayout>
 
         <SeekBar
@@ -110,42 +96,41 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginTop="5dp"
+            android:maxHeight="1000dp"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:progress="10"
             android:progressDrawable="@drawable/budget_progress_ok"
             android:secondaryProgress="90"
-            android:thumb="@drawable/budget_progress_thumb" />
+            android:thumb="@drawable/budget_progress_thumb"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="5dp"
-            android:background="@color/listview_divider" />
+            android:background="@color/listview_divider"/>
 
         <LinearLayout
-            android:id="@+id/llBudgetDetails"
+            android:id="@+id/llBudgetDetailTransactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp">
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:text="@string/budget_detail_detail"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/icon_next" />
+                android:src="@drawable/icon_next"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -167,12 +152,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="20"
             android:text="@string/budget_detail_history"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"/>
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/icon_next" />
+            android:src="@drawable/icon_next"/>
     </LinearLayout>
 </LinearLayout>
