--- a/WalletAnalyzing/app/src/main/res/layout/layout_toast_successful.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_toast_successful.xml
@@ -3,7 +3,7 @@
               android:id="@+id/llCustomToast"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:background="@drawable/background_notification"
+              android:background="@drawable/background_notification_successful"
               android:gravity="center_vertical"
               android:orientation="horizontal"
               android:padding="10dp">
@@ -15,7 +15,7 @@
         android:src="@drawable/icon_notification"/>
 
     <TextView
-        android:id="@+id/tvError"
+        android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
