--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_category.xml
@@ -42,4 +42,9 @@
             android:padding="5dp"
             android:scaleType="fitCenter"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/listview_divider" />
 </LinearLayout>
