--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_category.xml
@@ -43,4 +43,9 @@
             android:scaleType="fitCenter"
             android:src="@drawable/icon_check"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/listview_divider" />
 </LinearLayout>
