--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_select.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_select.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/layout_account"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingBottom="?attr/actionBarSize"
-    android:clickable="true">
+    android:paddingBottom="?attr/actionBarSize">
 
     <ListView
         android:id="@+id/lvAccount"
@@ -16,7 +16,8 @@
         android:layout_height="match_parent"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@color/listview_divider"
-        android:dividerHeight="0.5dp"/>
+        android:dividerHeight="0.5dp"
+        android:scrollbars="none" />
 
     <!-- Here is the view to show if the list is empty -->
     <TextView
@@ -26,5 +27,5 @@
         android:layout_centerInParent="true"
         android:text="No items."
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 </RelativeLayout>
