--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_transactions.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_account_transactions.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/background_main_frame"
-            android:clickable="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_main_frame"
+    android:clickable="true"
+    android:scrollbars="none">
 
     <LinearLayout
         android:id="@+id/layout_account"
@@ -25,7 +26,7 @@
                 android:layout_weight="4"
                 android:text="@string/account_list_remain"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvAccountRemain"
@@ -34,24 +35,24 @@
                 android:layout_weight="6"
                 android:gravity="right"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
-            android:background="@color/listview_divider"/>
+            android:background="@color/listview_divider" />
 
         <LinearLayout
             android:id="@+id/llTransactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:orientation="vertical" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.2dp"
-            android:background="@color/listview_divider"/>
+            android:background="@color/listview_divider" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,7 +68,7 @@
                 android:layout_weight="4"
                 android:text="@string/account_list_init_balance"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvAccountInitBalance"
@@ -76,7 +77,7 @@
                 android:layout_weight="6"
                 android:gravity="right"
                 android:textColor="@android:color/black"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
