--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_category.xml
@@ -42,7 +42,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:id="@+id/llCategories"
