--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail_transactions.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_detail_transactions.xml
@@ -7,24 +7,27 @@
     android:background="@color/background_main_frame"
     android:clickable="true"
     android:orientation="vertical"
-    android:padding="10dp"
     android:weightSum="10">
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
         android:text="@string/budget_detail_transaction_description"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:padding="10dp"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8.5">
+        android:layout_weight="8"
+        android:scrollbars="none">
 
         <LinearLayout
-            android:id="@+id/llTransactions"
+            android:id="@+id/llCategoryTransactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -39,6 +42,7 @@
         android:gravity="center"
         android:text="@string/budget_detail_transaction_total"
         android:textColor="@android:color/black"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:padding="10dp"/>
 
 </LinearLayout>
