--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_history.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_budget_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
@@ -14,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:text="@string/budget_history_description"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black" />
 
     <ListView
         android:id="@+id/lvHistory"
@@ -24,6 +23,7 @@
         android:cacheColorHint="@android:color/transparent"
         android:descendantFocusability="blocksDescendants"
         android:divider="@color/listview_divider"
-        android:dividerHeight="0.1dp"/>
+        android:dividerHeight="0.1dp"
+        android:scrollbars="none" />
 
 </LinearLayout>
