--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_parent.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_parent.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/background_main_frame"
-              android:clickable="true"
-              android:paddingBottom="20dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_main_frame"
+    android:clickable="true"
+    android:paddingBottom="20dp">
 
     <ListView
         android:id="@+id/lvParentCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent"/>
+        android:cacheColorHint="@android:color/transparent"
+        android:scrollbars="none" />
 </LinearLayout>
