--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_event.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@color/listview_divider"
-        android:dividerHeight="0.2dp"/>
+        android:dividerHeight="0.2dp"
+        android:scrollbars="none"/>
 
 </LinearLayout>
