--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_account.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@color/listview_divider"
-        android:dividerHeight="0.2dp"/>
+        android:dividerHeight="0.2dp"
+        android:scrollbars="none"/>
 
     <!-- Here is the view to show if the list is emtpy -->
     <TextView
