--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_list_budget.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/layout_budget"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_budget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
@@ -15,7 +15,8 @@
         android:layout_margin="10dp"
         android:cacheColorHint="@android:color/transparent"
         android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"/>
+        android:dividerHeight="10dp"
+        android:scrollbars="none" />
 
     <!-- Here is the view to show if the list is emtpy -->
     <TextView
@@ -24,5 +25,5 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="No items."
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 </FrameLayout>
