--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_event_list.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_event_list.xml
@@ -50,7 +50,8 @@
             android:background="@android:color/white"
             android:cacheColorHint="@android:color/transparent"
             android:divider="@color/listview_divider"
-            android:dividerHeight="0.2dp"/>
+            android:dividerHeight="0.1dp"
+            android:scrollbars="none"/>
 
         <!-- Here is the view to show if the list is empty -->
         <TextView
