--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_utilities.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_utilities.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:clickable="true"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              tools:context="analyzing.wallet.local.walletanalyzing.ActivityMain">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="analyzing.wallet.local.walletanalyzing.ActivityMain">
 
     <ImageButton
         android:id="@+id/btnFileBrowser"
@@ -19,7 +19,7 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="fitCenter"
-        android:src="@drawable/icon_file_browser"/>
+        android:src="@drawable/icon_file_browser" />
 
     <TextView
         android:id="@+id/txtCheckDB"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text=""
-        android:textColor="@color/blue_text"/>
+        android:textColor="@color/blue_text" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,14 +39,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Account"/>
+            android:text="Account" />
 
         <Button
             android:id="@+id/btnCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Category"/>
+            android:text="Category" />
     </LinearLayout>
 
     <RelativeLayout
@@ -59,7 +59,8 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:cacheColorHint="@android:color/transparent"
-            android:visibility="gone"/>
+            android:scrollbars="none"
+            android:visibility="gone" />
 
         <ListView
             android:id="@+id/lvCategory"
@@ -67,6 +68,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:cacheColorHint="@android:color/transparent"
-            android:visibility="gone"/>
+            android:scrollbars="none"
+            android:visibility="gone" />
     </RelativeLayout>
 </LinearLayout>
