--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_transaction_category.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_budget_transaction_category.xml
@@ -8,14 +8,18 @@
         android:id="@+id/llCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/listview_parent_item_background">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:id="@+id/ivExpand"
@@ -35,7 +39,8 @@
                 android:layout_weight="6"
                 android:text="@string/budget_detail_transaction_category_sum"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvAmount"
@@ -43,9 +48,11 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center_vertical|right"
-                android:padding="5dp"
                 android:scaleType="fitCenter"
-                android:text="@string/currency_icon_vietnam"/>
+                android:text="@string/currency_icon_vietnam"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -55,18 +62,11 @@
         android:layout_height="0.1dp"
         android:background="@color/listview_divider"/>
 
-    <ListView
-        android:id="@+id/lvTransactions"
+    <LinearLayout
+        android:id="@+id/llTransactions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:cacheColorHint="@android:color/transparent"
         android:background="@android:color/transparent"
-        android:dividerHeight="0.1dp"
-        android:divider="@color/listview_divider"
         android:orientation="vertical"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/listview_divider"/>
 </LinearLayout>
