--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_event.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_event.xml
@@ -39,32 +39,37 @@
                 android:layout_marginTop="5dp"
                 android:text="Từ XX/YY/ZZZZ"
                 android:textColor="@color/textcolor_listview_account"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:textStyle="italic"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tvExpense"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:text="Chi: 1.000.000đ"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="right|center_vertical"
+                android:layout_gravity="center_vertical"
+                android:text="@string/content_expense"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/tvIncome"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginTop="5dp"
-                android:gravity="right"
-                android:text="Thu: 1.000.000đ"
+                android:layout_gravity="center_vertical"
+                android:gravity="right|center_vertical"
+                android:text="@string/content_income"
                 android:textColor="@color/textcolor_income"
                 android:textSize="16sp"/>
         </LinearLayout>
