--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_listview_only.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_listview_only.xml
@@ -6,7 +6,7 @@
     android:clickable="true">
 
     <ListView
-        android:id="@+id/lvCurrency"
+        android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@android:color/transparent"
