--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi.xml
@@ -92,6 +92,7 @@
         android:id="@+id/llEVI"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
         android:background="@android:color/white"/>
 
