--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_parent.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_category_parent.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main_frame"
-    android:clickable="true"
-    android:paddingBottom="20dp">
+    android:clickable="true">
 
     <ListView
         android:id="@+id/lvParentCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="@android:color/transparent"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        android:divider="@color/listview_divider"
+        android:dividerHeight="0.2dip"/>
 </LinearLayout>
