--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi_detail_list.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_report_evi_detail_list.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:id="@+id/ll_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:layout_height="match_parent"
         android:clickable="true"
         android:orientation="vertical">
 
