--- a/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_create.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/layout_fragment_transaction_create.xml
@@ -9,12 +9,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background_main_frame"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_gray"
             android:cacheColorHint="@android:color/transparent"
             android:orientation="vertical"
             android:paddingBottom="?attr/actionBarSize"
@@ -23,7 +23,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:cacheColorHint="@android:color/transparent">
 
