--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_category_parent.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_category_parent.xml
@@ -7,7 +7,6 @@
               android:orientation="horizontal"
               android:padding="10dp">
 
-
     <TextView
         android:id="@+id/tvCategoryName"
         android:layout_width="0dp"
@@ -15,7 +14,7 @@
         android:layout_weight="6"
         android:gravity="center_vertical"
         android:text="Category Name"
-        android:textColor="@android:color/black"/>
+        android:textColor="@color/textcolor_title_attribute"/>
 
     <ImageView
         android:id="@+id/ivUsing"
